--- a/main.css
+++ b/main.css
@@ -132,9 +132,9 @@ footer{
 .button{
     background-color: #ffffff;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 0.2em;
-    margin: 2px;
+    margin: 0px 10px;
     text-align: center;
     color: #2E7FF7;
     font-size: 2vw;
